--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     dockerfilePath: ./Dockerfile
     envVars:
       - key: SESSION
-        value: ""
+        value: "RGNK~qJgA4mNP"
       - key: DATABASE_URL
         fromDatabase:
           name: my-database
