--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     dockerfilePath: ./Dockerfile
     envVars:
       - key: SESSION
-        value: "RGNK~qJgA4mNP"
+        value: "RGNK~Kf6cvZeM"
       - key: DATABASE_URL
         fromDatabase:
           name: my-database
